--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.btn-primary {
+		@apply px-4 py-2 bg-sky-500 hover:bg-sky-400 border-[1px] border-white/10 rounded-lg font-semibold text-sm;
+	}
+}
