--- a/src/app.css
+++ b/src/app.css
@@ -6,4 +6,8 @@
 	.btn-primary {
 		@apply px-4 py-2 bg-sky-500 hover:bg-sky-400 border-[1px] border-white/10 rounded-lg font-semibold text-sm;
 	}
+
+	.btn-secondary {
+		@apply px-4 py-2 text-sm font-semibold hover:text-sky-400;
+	}
 }
