--- a/src/app.css
+++ b/src/app.css
@@ -15,6 +15,19 @@
 		@apply underline hover:text-sky-400;
 	}
 
+	.registration-form {
+		@apply max-w-md mx-auto grid gap-4 py-10;
+	}
+	.registration-form div {
+		@apply grid;
+	}
+	.registration-form input {
+		@apply input;
+	}
+	.registration-form label {
+		@apply text-xs pl-1;
+	}
+
 	.input {
 		@apply border border-indigo-500/20 focus:border-indigo-500 bg-dark rounded-md py-1 px-3 outline-none;
 	}
