--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -39,10 +41,6 @@
 
 html {
 	@apply bg-bg text-slate-200;
-}
-
-.font-serif {
-	font-family: Chapaza, serif;
 }
 
 @font-face {
