--- a/src/app.css
+++ b/src/app.css
@@ -26,7 +26,7 @@
 	}
 
 	.registration-form {
-		@apply max-w-md mx-auto grid gap-4 py-10;
+		@apply sm:max-w-md sm:mx-auto grid gap-4 py-10 px-3;
 	}
 	.registration-form div {
 		@apply grid;
