--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,10 @@
 		@apply px-4 py-2 text-sm font-semibold hover:text-sky-400;
 	}
 
+	.btn-secondary-bg {
+		@apply px-4 py-2 text-sm bg-dark-900 rounded-lg hover:brightness-110 border border-white/5;
+	}
+
 	.btn-danger {
 		@apply px-4 py-2 text-sm font-semibold text-red-400 hover:text-red-500;
 	}
