--- a/src/app.css
+++ b/src/app.css
@@ -60,9 +60,111 @@ html {
 	src: url('/fonts/Chapaza.ttf');
 }
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-	-webkit-text-fill-color: rgb(16 16 16 /1);
+.markdown-body h1,
+.markdown-body h2,
+.markdown-body h3,
+.markdown-body h4,
+.markdown-body h5 {
+	margin-bottom: 16px;
+	padding: 0;
+	font-weight: 600;
+}
+
+.markdown-body h1 {
+	font-size: 2em;
+}
+.markdown-body h2 {
+	font-size: 1.5em;
+	margin: 24px 0 6px;
+}
+.markdown-body h3 {
+	font-size: 1.25em;
+}
+.markdown-body h4 {
+	font-size: 1em;
+}
+.markdown-body h5 {
+	font-size: 0.875em;
+}
+.markdown-body h6 {
+	font-size: 0.85em;
+}
+
+.markdown-body p {
+	margin-top: 0;
+	margin-bottom: 10px;
+}
+
+.markdown-body a {
+	color: #7dd3fc;
+	margin: 0;
+	padding: 0;
+	vertical-align: baseline;
+}
+.markdown-body ul {
+	list-style-type: disc;
+}
+.markdown-body ol {
+	list-style-type: decimal;
+}
+
+.markdown-body li {
+	line-height: 24px;
+}
+.markdown-body li ul,
+.markdown-body ul li,
+.markdown-body li ol,
+.markdown-body ol li {
+	margin-left: 2em;
+}
+.markdown-body p,
+.markdown-body ul,
+.markdown-body ol {
+	font-size: 16px;
+	line-height: 24px;
+}
+.markdown-body pre {
+	padding: 0px 24px;
+	max-width: 800px;
+	white-space: pre-wrap;
+}
+.markdown-body code {
+	font-family: Consolas, Monaco, Andale Mono, monospace;
+	line-height: 1.5;
+	font-size: 13px;
+}
+.markdown-body aside {
+	display: block;
+	float: right;
+	width: 390px;
+}
+.markdown-body blockquote {
+	margin: 1em 2em;
+	max-width: 476px;
+}
+.markdown-body blockquote p {
+	color: #666;
+	max-width: 460px;
+}
+.markdown-body hr {
+	width: 540px;
+	text-align: left;
+	margin: 0 auto 0 0;
+	color: #999;
+}
+.markdown-body table {
+	border-collapse: collapse;
+	margin: 1em 1em;
+	border: 1px solid #282828;
+}
+.markdown-body table thead {
+	background-color: #282828;
+}
+.markdown-body table thead td {
+	color: #666;
+}
+.markdown-body table th,
+.markdown-body table td {
+	padding: 6px 13px;
+	border: 1px solid #282828;
 }
