--- a/src/app.css
+++ b/src/app.css
@@ -49,6 +49,10 @@
 	.input {
 		@apply border border-dark-800 focus:border-indigo-500 bg-dark-900 rounded-md py-1 px-3 outline-none;
 	}
+
+	.err-msg {
+		@apply py-2 px-4 bg-red-500/30 rounded-lg border border-red-600 text-sm;
+	}
 }
 
 html {
